--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -185,7 +185,14 @@ section .mbr-background-video-preview {
 .media-container-column > * {
   width: 100%;
 }
-
+/*new css*/
+#menu2-q #navbarSupportedContent ul li a{
+    margin:10px !important;
+}
+#menu2-q.cid-sAMSSZjmNH .navbar-buttons {
+  min-width: 120px;
+}
+/*new css end*/
 @media (min-width: 992px) {
   .media-container-row {
     flex-wrap: nowrap;
