--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -186,9 +186,11 @@ section .mbr-background-video-preview {
   width: 100%;
 }
 /*new css*/
-#menu2-q #navbarSupportedContent ul li a{
+#menu2-q #navbarSupportedContent ul li a.nav-link{
     margin:10px !important;
 }
+
+
 #menu2-q.cid-sAMSSZjmNH .navbar-buttons {
   min-width: 120px;
 }
